# UR5-OVGNet-Web-Backend

./: .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: .env  config.py  main.py  middleware.py  pyproject.toml
app/api/: routes.py
app/service/: nlp.py  ros.py  speech.py
