[tool.poetry]
name = "ur5-ovgnet-web-backend"
version = "0.1.0"
description = ""
authors = ["FariqJavier <fariqjavier@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
