[tool.poetry]
name = "ur5-ovgnet-web-backend"
version = "0.1.0"
description = ""
authors = ["FariqJavier <fariqjavier@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.13"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
websockets = "^15.0"
spacy = "^3.8.4"
python-multipart = "^0.0.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
